fix(version): sort snapshots below the release they lead to (SemVer precedence)
The comparator appended the build number as an extra numeric core part and used
"longer list wins", so `2.0` -> [2,0] sorted BELOW every `2.0.x` snapshot
([2,0] < [2,0,83]). A clean ".0" release therefore looked older than its own
pre-release builds, and neither the update check (VersionChecker) nor the Windows
auto-installer (WindowsInstallerUpdater.selectLatest) would offer it.

Model the build number as a pre-release ordinal instead: SemVer keeps the numeric
core in `parts` and the build separately in `build`; a non-blank suffix (`-SNAPSHOT`)
marks a pre-release, which per SemVer 2.0.0 precedence sorts below the matching final
release. Result: 2.0-SNAPSHOT (90) < 2.0 < 2.1-SNAPSHOT (1) < 2.1.

VersionTest is rewritten to lock in the sane ordering; the Windows updater tests are
unaffected (they key off core-version differences or the prerelease flag).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01GdGwbnJtUvTyDyqKpns7Gf